8139868: CMSScavengeBeforeRemark broken after JDK-8134953

Reviewed-by: sjohanss, jwilhelm