hotspot/src/share/vm/gc/shared/gcId.cpp
@@ -60,12 +60,12 @@ GCIdMark::~GCIdMark() {
 }
 
 GCIdMarkAndRestore::GCIdMarkAndRestore() : _gc_id(GCId::create()) {
-  _previous_gc_id = GCId::current(); // will assert that the GC Id is not undefined
+  _previous_gc_id = GCId::current_raw();
   currentNamedthread()->set_gc_id(_gc_id);
 }
 
 GCIdMarkAndRestore::GCIdMarkAndRestore(uint gc_id) : _gc_id(gc_id) {
-  _previous_gc_id = GCId::current(); // will assert that the GC Id is not undefinied
+  _previous_gc_id = GCId::current_raw();
   currentNamedthread()->set_gc_id(_gc_id);
 }
 
